refactor(sysSocial): 优化社会化关系服务异常处理
- 统一新增、更新、删除操作中异常抛出，避免返回布尔值
- 在插入和更新前增加唯一性校验，确保三方账号和用户平台唯一
- 删除SysLoginService中取消授权操作无需显式判断结果
- 修改SysSocial接口方法返回类型，从Boolean改为void
- 调整获取集合首元素方式，避免潜在空指针问题
- 修正SysSocial实体注释，明确authId含义为授权唯一ID